--- a/16-input/CMakeLists.txt
+++ b/16-input/CMakeLists.txt
@@ -46,7 +46,7 @@ endif()
 
 # copy DLLs (SDL2.dll, glfw3.dll, Qt stuff,...)
 if(WIN32)
-	if(${GUI_TYPE} STREQUAL "SDL" AND SDL2_DLL)
+	if(${GUI_TYPE} STREQUAL "SDL2" AND SDL2_DLL)
 		add_custom_command(TARGET ${APP_NAME}
 			POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${SDL2_DLL}" $<TARGET_FILE_DIR:${APP_NAME}>)
 	elseif(${GUI_TYPE} STREQUAL "GLFW" AND glfw3_DLL)
