16-input: KeyCallback using KeyCode implementation for Xlib.

--- a/16-input/CMakeLists.txt
+++ b/16-input/CMakeLists.txt
@@ -37,7 +37,7 @@ set_property(SOURCE VulkanWindow.cpp APPEND PROPERTY COMPILE_DEFINITIONS ${vulka
 set_property(TARGET ${APP_NAME} PROPERTY CXX_STANDARD 17)
 
 # xkbcommon
-if(${GUI_TYPE} STREQUAL "Wayland")
+if(${GUI_TYPE} STREQUAL "Wayland" OR ${GUI_TYPE} STREQUAL "Xlib")
 	find_package(xkbcommon REQUIRED)
 	target_link_libraries(${APP_NAME} xkbcommon::xkbcommon)
 endif()
