Added SDL3 support for 14-multiplatformWindow. Tested on SDL3 preview.

--- a/14-multiplatformWindow/testMultiWindow/CMakeLists.txt
+++ b/14-multiplatformWindow/testMultiWindow/CMakeLists.txt
@@ -40,7 +40,10 @@ set_property(TARGET ${APP_NAME} PROPERTY CXX_STANDARD 17)
 
 # copy DLLs (SDL2.dll, glfw3.dll, Qt stuff,...)
 if(WIN32)
-	if(${GUI_TYPE} STREQUAL "SDL" AND SDL2_DLL)
+	if(${GUI_TYPE} STREQUAL "SDL3" AND SDL3_DLL)
+		add_custom_command(TARGET ${APP_NAME}
+			POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${SDL3_DLL}" $<TARGET_FILE_DIR:${APP_NAME}>)
+	elseif(${GUI_TYPE} STREQUAL "SDL2" AND SDL2_DLL)
 		add_custom_command(TARGET ${APP_NAME}
 			POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${SDL2_DLL}" $<TARGET_FILE_DIR:${APP_NAME}>)
 	elseif(${GUI_TYPE} STREQUAL "GLFW" AND glfw3_DLL)
