SDL3 and SDL2 fixes.

--- a/16-input/CMakeLists.txt
+++ b/16-input/CMakeLists.txt
@@ -36,7 +36,7 @@ target_link_libraries(${APP_NAME} ${libs})
 set_property(SOURCE VulkanWindow.cpp APPEND PROPERTY COMPILE_DEFINITIONS ${vulkanWindowDefines})
 set_property(TARGET ${APP_NAME} PROPERTY CXX_STANDARD 17)
 
-# copy DLLs (SDL2.dll, glfw3.dll, Qt stuff,...)
+# copy DLLs (SDL3.dll, SDL2.dll, glfw3.dll, Qt stuff,...)
 if(WIN32)
 	if(${GUI_TYPE} STREQUAL "SDL3" AND SDL3_DLL)
 		add_custom_command(TARGET ${APP_NAME}
