--- a/examples/mandelbrot/CMakeLists.txt
+++ b/examples/mandelbrot/CMakeLists.txt
@@ -1,14 +1,14 @@
-set(APP_NAME 16-input)
+set(APP_NAME mandelbrot)
 
 project(${APP_NAME})
 
 set(APP_SOURCES
     main.cpp
-    VulkanWindow.cpp
+    ${CMAKE_SOURCE_DIR}/src/VulkanWindow.cpp
    )
 
 set(APP_INCLUDES
-    VulkanWindow.h
+    ${CMAKE_SOURCE_DIR}/src/VulkanWindow.h
    )
 
 set(APP_SHADERS
@@ -17,12 +17,11 @@ set(APP_SHADERS
    )
 
 # dependencies
-set(CMAKE_MODULE_PATH "${${APP_NAME}_SOURCE_DIR}/;${CMAKE_MODULE_PATH}")
 find_package(Vulkan REQUIRED)
 set(libs Vulkan::Vulkan)
 
 # GUI dependencies
-include(GuiMacros.cmake)
+include(${CMAKE_SOURCE_DIR}/CMakeModules/GuiMacros.cmake)
 GuiConfigure(APP_SOURCES APP_INCLUDES libs defines vulkanWindowDefines includes)
 
 # executable
@@ -30,7 +29,7 @@ add_shaders("${APP_SHADERS}" APP_SHADER_DEPS)
 add_executable(${APP_NAME} ${APP_SOURCES} ${APP_INCLUDES} ${APP_SHADER_DEPS})
 
 # target
-target_include_directories(${APP_NAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR} ${includes})
+target_include_directories(${APP_NAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_SOURCE_DIR}/src ${includes})
 target_compile_definitions(${APP_NAME} PRIVATE ${defines})
 target_link_libraries(${APP_NAME} ${libs})
 set_property(SOURCE VulkanWindow.cpp APPEND PROPERTY COMPILE_DEFINITIONS ${vulkanWindowDefines})
