Make tests/multiWindowTests compile again (after porting from the repository where VulkanWindow was born).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(VulkanWindow)
 
 set(PROJECTS
 	examples/mandelbrot
+	tests/multiWindowTests
 )
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMakeModules/;${CMAKE_MODULE_PATH}")
