--- a/tests/multiWindowTests/CMakeLists.txt
+++ b/tests/multiWindowTests/CMakeLists.txt
@@ -1,30 +1,27 @@
-cmake_minimum_required(VERSION 3.10.2)
-
-set(APP_NAME testMultiWindow)
+set(APP_NAME multiWindowTests)
 
 project(${APP_NAME})
 
 set(APP_SOURCES
-    main.cpp
-    ../VulkanWindow.cpp
-   )
+	main.cpp
+	${CMAKE_SOURCE_DIR}/src/VulkanWindow.cpp
+)
 
 set(APP_INCLUDES
-    ../VulkanWindow.h
-   )
+	${CMAKE_SOURCE_DIR}/src/VulkanWindow.h
+)
 
 set(APP_SHADERS
-    shader.vert
-    shader.frag
-   )
+	shader.vert
+	shader.frag
+)
 
 # dependencies
-set(CMAKE_MODULE_PATH "${${APP_NAME}_SOURCE_DIR}/..;${CMAKE_MODULE_PATH}")
 find_package(Vulkan REQUIRED)
 set(libs Vulkan::Vulkan)
 
 # GUI dependencies
-include(../GuiMacros.cmake)
+include(${CMAKE_SOURCE_DIR}/CMakeModules/GuiMacros.cmake)
 GuiConfigure(APP_SOURCES APP_INCLUDES libs defines vulkanWindowDefines includes)
 
 # executable
@@ -32,13 +29,13 @@ add_shaders("${APP_SHADERS}" APP_SHADER_DEPS)
 add_executable(${APP_NAME} ${APP_SOURCES} ${APP_INCLUDES} ${APP_SHADER_DEPS})
 
 # target
-target_include_directories(${APP_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/.." ${CMAKE_CURRENT_BINARY_DIR} ${includes})
+target_include_directories(${APP_NAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_SOURCE_DIR}/src ${includes})
 target_compile_definitions(${APP_NAME} PRIVATE ${defines})
 target_link_libraries(${APP_NAME} ${libs})
-set_property(SOURCE ../VulkanWindow.cpp APPEND PROPERTY COMPILE_DEFINITIONS ${vulkanWindowDefines})
+set_property(SOURCE ${CMAKE_SOURCE_DIR}/src/VulkanWindow.cpp APPEND PROPERTY COMPILE_DEFINITIONS ${vulkanWindowDefines})
 set_property(TARGET ${APP_NAME} PROPERTY CXX_STANDARD 17)
 
-# copy DLLs (SDL2.dll, glfw3.dll, Qt stuff,...)
+# copy DLLs (SDL3.dll, SDL2.dll, glfw3.dll, Qt stuff,...)
 if(WIN32)
 	if(${GUI_TYPE} STREQUAL "SDL3" AND SDL3_DLL)
 		add_custom_command(TARGET ${APP_NAME}
